style/main.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap");

:root {
  --light-gray: #e2e6e1;
  --dark-gray: #3a3a3a;
  --blue: #43cfd9;
  --green: #74d14c;
  --red: #c42c21;
  --shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  --shadow-2: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  --bg: rgb(67, 207, 217, 0.15);
}

/* #region base */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  background: var(--bg);
  font-family: "Poppins", sans-serif;
  overflow-x: hidden;

  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
/* #endregion base */

/* #region grid classes */
.container {
  padding: 0 2rem;
  flex-grow: 1;
}
.row {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1rem;
  margin-left: -1rem;
}
.row.no-gutter {
  margin-right: auto;
  margin-left: auto;
}
*[class*="col-"],
.col {
  padding-right: 1rem;
  padding-left: 1rem;
  position: relative;
  width: 100%;
}
.no-gutter > *[class*="col-"],
.no-gutter > .col {
  padding-right: 0;
  padding-left: 0;
}
.col-1 {
  flex: 0 0 calc(100% / 12);
  max-width: calc(100% / 12);
}
.col-2 {
  flex: 0 0 calc(100% / 12 * 2);
  max-width: calc(100% / 12 * 2);
}
.col-3 {
  flex: 0 0 calc(100% / 12 * 3);
  max-width: calc(100% / 12 * 3);
}
.col-4 {
  flex: 0 0 calc(100% / 12 * 4);
  max-width: calc(100% / 12 * 4);
}
.col-5 {
  flex: 0 0 calc(100% / 12 * 5);
  max-width: calc(100% / 12 * 5);
}
.col-6 {
  flex: 0 0 calc(100% / 12 * 6);
  max-width: calc(100% / 12 * 6);
}
.col-7 {
  flex: 0 0 calc(100% / 12 * 7);
  max-width: calc(100% / 12 * 7);
}
.col-8 {
  flex: 0 0 calc(100% / 12 * 8);
  max-width: calc(100% / 12 * 8);
}
.col-9 {
  flex: 0 0 calc(100% / 12 * 9);
  max-width: calc(100% / 12 * 9);
}
.col-10 {
  flex: 0 0 calc(100% / 12 * 10);
  max-width: calc(100% / 12 * 10);
}
.col-11 {
  flex: 0 0 calc(100% / 12 * 11);
  max-width: calc(100% / 12 * 11);
}
.col-12 {
  flex: 0 0 100%;
  max-width: 100%;
}
.col-auto {
  flex: 0 0 auto;
  max-width: 100%;
  width: auto;
}
/* #endregion */



/* #region top elements */
header {
  padding: 1rem 2rem;
  display: flex;
  align-items: center;
  border-bottom: 2px solid var(--dark-gray);
}
.page-title {
  display: inline-block;
}
.logo-img {
  margin-right: 2rem;
}
/* ----------------- */
nav {
  margin-bottom: 2rem;
}
.navbar-list {
  list-style: none;
  width: 100%;
  padding: 0.75rem 2rem;
  margin: 0;
  display: flex;
  justify-content: center;
  border-bottom: 2px solid var(--dark-gray);
}
.navbar-list-item {
  margin: 0 1.5rem;
}
.navbar-link {
  text-decoration: none;
  color: var(--dark-gray);
  font-weight: 800;
  border-radius: 0.5rem;
  padding: 0.25rem 0.5rem;
  background: rgba(0, 0, 0, 0.15);
}
.navbar-link:hover {
  background: rgba(0, 0, 0, 0.25);
}
/* ----------------- */
/* #endregion top elements end */



/* #region footer elements */
footer {
  background: linear-gradient(to bottom right, var(--blue), var(--green));
  padding: 0.5rem 2rem;
  text-align: center;
}
/* #endregion footer elements */


/* #region components */
.info-card {
  background-color: white;
  padding: 1rem;
  margin-bottom: 0.75rem;
  border-radius: 1rem;
  box-shadow: var(--shadow-1);
}
.info-card h4 {
  margin: 0;
  font-size: 1.25rem;
}
.info-card p {
  margin: 0;
}
/* ----------------- */
.info-block:not(:last-child) {
  margin-bottom: 1rem;
}
.info-block h4 {
  margin: 0;
  font-size: 1.15rem;
}
.info-block p {
  margin: 0;
}
/* ----------------- */
.action-center {
  text-align: center;
}
.btn {
  text-decoration: none;
  font-weight: 800;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem;
  box-shadow: var(--shadow-1);
  display: inline-block;
}
.btn:hover {
  transform: scale(1.15);
  box-shadow: var(--shadow-2);
}
.btn-primary {
  color: white;
  background: linear-gradient(to bottom right, var(--blue), var(--green));
  transition: all 0.5s ease;
}
/* ----------------- */
.dark-link {
  font-weight: 700;
  text-decoration: underline dotted;
  color: var(--dark-gray);
}
.dark-link:hover {
  text-decoration: underline wavy;
}

/* #endregion components end */

/* #region utilities */
.text-danger { color: var(--red); }
/* #endregion utilities end */

